# cmm_compiler

./: .gitignore  CP测试代码.md  Cargo.toml  README.md  dotfile  report.md  test.asm  test.ll
.github/workflows/: c.yml  rust.yml  test.yml
.history/test/: test7_20220424163230.c  test8_20220424163237.c  test8_20220424163249.c  test8_20220424163253.c  test8_20220424163255.c  test8_20220424163256.c  test8_20220424163259.c  test8_20220424163304.c  test8_20220424163306.c  test8_20220424163307.c  test8_20220424163309.c  test8_20220424163310.c  test8_20220424163325.c  test8_20220424163328.c  test8_20220424163331.c  wrong10_20220424163806.c  wrong14_20220424163926.c  wrong20_20220424164043.c  wrong5_20220424163710.c  wrong6_20220424163719.c  wrong7_20220424163742.c
doc/: report.md  展示ppt.pptx
src/: ast_viz.rs  codegen.rs  error.rs  grammar.pest  io.c  lib.rs  main.rs  parser.rs
test/: test.c  test.ll  test.s  test10.c  test6.c  test8.c  test9.c  test_ast.c  test_ast.ll  test_ast.s  wrong1.c  wrong11.c  wrong13.c  wrong17.c
test/algorithm/: Makefile  bubble_sort.c  input.txt  merge_sort.c  merge_sort_new.c  output.txt  quick_sort.c
test/ok/: test.c  test1.c  test12.c  test13.c  test14.c  test2.c  test3.c  test6.c  test7.c  test8.c
test/opt/: gvn.c  promoteMem2Reg.c  reassociate.c  simplifyCFG.c  test1.c
test/with_output/: Makefile  test1.c  test2.c  test3.c  test4.c  test4_out.txt  test5_out.txt  test6.c  test6_out.txt  test7.c  test7_out.txt
test/wrong/: wrong10.c  wrong12.c  wrong15.c  wrong16.c  wrong18.c  wrong19.c  wrong2.c  wrong3.c  wrong4.c  wrong8.c  wrong9.c
