[package]
name = "cmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sugars = "3.0.1"
pest = "2.0.2"
pest_derive = "2.1.0"
clap = { version = "3.1", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm10-0",
] }
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
either = "1.6.1"
lazy_static = "1.4.0"