[package]
name = "cmm"
authors = ["Ji Gaoqiang", "Wu Yifei", "Gao Chenxi"]
version = "0.2.0"
edition = "2021"
description = "cmm is a simplified version of the C language introduced after the book \"Compiler Construction: Principles and Practice\"."
license = "MIT OR Apache-2.0"
readme = "report.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sugars = "3.0.1"
pest = "2.0.2"
pest_derive = "2.1.0"
clap = { version = "3.1", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm10-0",
] }
either = "1.6.1"
lazy_static = "1.4.0"
